@@ -23,15 +23,17 @@ module Shell
     class CloseRegion < Command
       def help
         return <<-EOF
-Close a single region. Optionally specify regionserver. Connects to the
-regionserver and runs close on hosting regionserver.  The close is done
-without the master's involvement (It will not know of the close).  Once
-closed, region will stay closed.  Use assign to reopen/reassign.  Use
-unassign or move to assign the region elsewhere on cluster. Use with
-caution.  For experts only.  Examples:
+Close a single region. Optionally specify regionserver 'servername' where
+A server name is its host, port plus startcode. For example:
+host187.example.com,60020,1289493121758 (find servername in master ui or
+when you do detailed status in shell).  Connects to the regionserver and
+runs close on hosting regionserver.  The close is done without the master's
+involvement (It will not know of the close).  Once closed, region will stay
+closed.  Use assign to reopen/reassign.  Use unassign or move to assign the
+region elsewhere on cluster. Use with caution.  For experts only.  Examples:
 
   hbase> close_region 'REGIONNAME'
-  hbase> close_region 'REGIONNAME', 'REGIONSERVER_IP:PORT'
+  hbase> close_region 'REGIONNAME', 'SERVER_NAME'
 EOF
       end
 
