@@ -347,6 +347,7 @@ Release 0.90.4 - Unreleased
    HBASE-3995  HBASE-3946 broke TestMasterFailover
    HBASE-2077  NullPointerException with an open scanner that expired causing
                an immediate region server shutdown -- part 2.
+   HBASE-4005  close_region bugs
 
 
   IMPROVEMENT
